--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -21,5 +21,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Edit this Task', edit_task_path(@task) %> |
+<%= link_to 'Back to List', tasks_path %>
