Changed the date/time format from UTC to local time

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,7 +13,7 @@
 <% @tasks.each do |task| %>
   <tr class="task table">
     <td><%= task.name %></td>
-    <td><%= task.due %></td>
+    <td><%= task.due.strftime("%m-%d-%Y %H:%M") %></td>
     <td><%= task.importance %></td>
     <td><%= link_to 'See and Edit Task Details', task %></td>
     <td><%= link_to 'Task Complete', task, confirm: 'Are you sure? This will delete the task forever!', method: :delete %></td>
