added heading columns in the index to make it look better and to better designate their functions

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,8 +5,8 @@
     <th>Name</th>
     <th>Due</th>
     <th>Importance</th>
-    <th></th>
-    <th></th>
+    <th>See More</th>
+    <th>Progress</th>
     <th></th>
   </tr>
 
