Added column to designate which tasks had been completed and that would mark it as completed rather than deleting it forever. Also added logic so that only uncompleted tasks are listed in index. Ran migration that changed the default value of completed to be false.

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :importance %><br />
     <%= f.number_field :importance %>
   </div>
+  <div class="field">
+    <%= f.label :completed %><br />
+    <%= f.radio_button :completed, "true" %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
